--- a/lesson_01/index.html
+++ b/lesson_01/index.html
@@ -18,26 +18,32 @@
     </header>
     <main>
         <section>
-            <ul><img src="./img/photo1.png" width="420" height="280" alt="Lifestyle">
+            <img src="./img/photo1.png" width="420" height="280" alt="Lifestyle">
             <h4>Lifestyle</h4>
             <h2>More than just a music festival</h2>
-            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p></ul>
-            <ul><img src="./img/photo2.png" width="420" height="280" alt="photodiary">
+            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+        </section>
+        <section>
+            <img src="./img/photo2.png" width="420" height="280" alt="photodiary">
             <h4>Photodiary</h4>
             <h2>Life tastes better with coffee</h2>
-            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p></ul>
-            <ul><img src="./img/photo3.png" width="420" height="280" alt="music">
+            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+        </section>
+        <section>
+            <img src="./img/photo3.png" width="420" height="280" alt="music">
             <h4>Music</h4>
             <h2>American dream</h2>
-            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p></ul>
-            <ul><img src="./img/photo4.png" width="420" height="280" alt="travel">
+            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+        </section>
+        <section>
+            <img src="./img/photo4.png" width="420" height="280" alt="travel">
             <h4>Travel</h4>
             <h2>A day exploring the Alps</h2>
-            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p></ul>
+            <p>Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
         </section>
     </main>
     <footer>
-        <ul><button>Load more</button></ul>
+        <button>Load more</button>
     </footer>
 </body>
 </html>
