--- a/lesson_03/index.html
+++ b/lesson_03/index.html
@@ -10,20 +10,21 @@
     <header>
         <nav class="menu">
             <div class="container">
-                <span class="links"><a class="menu_item_link" href="#">Lifestyle</a></span>
-                <span class="links"><a class="menu_item_link" href="#">photodiary</a></span>
-                <span class="links"><a class="menu_item_link" href="#">music</a></span>
-                <span class="links"><a class="menu_item_link" href="#">Travel</a></span>
+                <ul>
+                <li class="links"><a class="menu_item_link" href="#">Lifestyle</a></li>
+                <li class="links"><a class="menu_item_link" href="#">photodiary</a></li>
+                <li class="links"><a class="menu_item_link" href="#">music</a></li>
+                <li class="links"><a class="menu_item_link" href="#">Travel</a></li>
+            </ul>
     </div>
         </nav>
     </header>
 
     <main class="main">
+        <div class="main_wrapper">
         <section class="section">
 
-            <div class="img_wrapper">
-            <img class="lifestyle" src="./images/photo1.png" alt="Lifestyle">
-        </div>
+            <img class="images" src="./images/photo1.png" alt="Lifestyle">
             <h4 class="subtitle">Lifestyle</h4>
             <h2 class="title">More than just a music festival</h2>
             <p class="main_text">Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
@@ -31,9 +32,8 @@
         </section>
 
         <section class="section">
-            <div class="img_wrapper">
-            <img class="lifestyle" src="./images/photo2.png" alt="Lifestyle">
-        </div>
+
+            <img class="images" src="./images/photo2.png" alt="Lifestyle">
             <h4 class="subtitle">Lifestyle</h4>
             <h2 class="title">Life tastes better with coffee</h2>
             <p class="main_text">Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
@@ -42,20 +42,16 @@
 
         <section class="section">
 
-            <div class="img_wrapper">
-            <img class="photodiary" src="./images/photo3.png" alt="photodiary">
-        </div>
-            <h4 class="subtitle">Lifestyle</h4>
+            <img class="images" src="./images/photo3.png" alt="photodiary">
+            <h4 class="subtitle">Photodiary</h4>
             <h2 class="title">American dream</h2>
             <p class="main_text">Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 
         </section>
 
         <section class="section">
-            <div class="img_wrapper">
-            <img class="photodiary" src="./images/photo4.png" alt="photodiary">
-        </div>
-            <h4 class="subtitle">Lifestyle</h4>
+            <img class="images" src="./images/photo4.png" alt="photodiary">
+            <h4 class="subtitle">Photodiary</h4>
             <h2 class="title">More than just a music festival</h2>
             <p class="main_text">Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 
@@ -64,9 +60,7 @@
 
         <section class="section">
 
-            <div class="img_wrapper">
-            <img class="lifestyle" src="./images/photo5.png" alt="Lifestyle">
-        </div>
+            <img class="images" src="./images/photo5.png" alt="Lifestyle">
             <h4 class="subtitle">Lifestyle</h4>
             <h2 class="title">More than just a music festival</h2>
             <p class="main_text">Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
@@ -74,19 +68,22 @@
 
         <section class="section">
 
-            <div class="img_wrapper">
-            <img class="lifestyle" src="./images/photo6.png" alt="Lifestyle">
-        </div>
+            <img class="images" src="./images/photo6.png" alt="Lifestyle">
             <h4 class="subtitle">Lifestyle</h4>
             <h2 class="title">More than just a music festival</h2>
             <p class="main_text">Lorem ipsum dolor sit amet, conscctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 
         </section>
-        <div class="button">
-            <button class="button_load"><a class="button_text" href="#">Load more</a></button>
-        </div>
-    
+    </div>
     </main>
+
+    <footer class="footer">
+
+        <div class="button">
+            <button class="button_load">Load more</button>
+        </div>
+        
+    </footer>
 </body>
 </html>
 
