--- a/lesson_04/index.html
+++ b/lesson_04/index.html
@@ -87,6 +87,8 @@
         <p class="card_text">Sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor.</p>
         </div>
     </div>
+</div>
+
 </section>
 
 <section class="team">
