--- a/lesson_04/index.html
+++ b/lesson_04/index.html
@@ -35,9 +35,10 @@
 
     <main class="main">
 <section class="services">
+    <div class="main_servises">
     <h3 class="services_subtitle">We work with</h3>
 <h2 class="services_title">Amazing services</h2>
-
+</div>
 
 <div class="card">
     <div class="wrapper">
