--- a/lesson_03/index.html
+++ b/lesson_03/index.html
@@ -9,14 +9,12 @@
 <body>
     <header>
         <nav class="menu">
-            <div class="container">
-                <ul>
+                <ul class="menu_list">
                 <li class="links"><a class="menu_item_link" href="#">Lifestyle</a></li>
                 <li class="links"><a class="menu_item_link" href="#">photodiary</a></li>
                 <li class="links"><a class="menu_item_link" href="#">music</a></li>
                 <li class="links"><a class="menu_item_link" href="#">Travel</a></li>
             </ul>
-    </div>
         </nav>
     </header>
 
