--- a/lesson_06/index.html
+++ b/lesson_06/index.html
@@ -74,10 +74,10 @@
                 </div>
                 <form class="contact_form" action ="#" method = "get">
                     <div class="contact_form_content">
-                        <input class="form_name" required type="text" name="name" placeholder="your name *">
-                        <input class="form_email" required type="email" name="email" placeholder="your e-mail *">
+                        <input class="form_name" type="text" name="name" placeholder="your name *">
+                        <input class="form_email" type="email" name="email" placeholder="your e-mail *">
                         <input class="form_subject" type="text" name="subject" placeholder="subject">
-                        <textarea class="form_message" required name="message" placeholder="your message *"></textarea>
+                        <textarea class="form_message" name="message" placeholder="your message *"></textarea>
                     </div>
                     <div class="contact_form_submit">
                         <input class="form_submit" type="submit" value="send message">
